Add screenshots of application